spade-tests/src/snapshots/spade_tests__integration__trait_tests__binding_self_causes_reasonable_error.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: self specified multiple times
  ┌─ testinput:7:5
  │
7 │     x.test$(self: X())
  │     ^       ---- First specified here
  │     │        
  │     Later specified here


